# HangManSolver

./: .gitignore  README.md  main.py  pyproject.toml
core/: scan.py  search.py  user_space.py
