[project]
name = "HangManSolver"
version = "0.1.0"
description = "Small hangman solver."
authors = ["Thomas Byr <thomas-c2000@outlook.com>"]
license = "GNU General Public License v3 (GPLv3)"
readme = "README.md"
python = "^3.8"
homepage = "https://github.com/ThomasByr/hangmansolver.git"
repository = "https://github.com/ThomasByr/hangmansolver.git"
documentation = "https://github.com/ThomasByr/hangmansolver.git"

classifiers = ["Topic :: Software Development"]

# Requirements
[dependencies]
unidecode = "^1.0"

[dev-dependencies]
yapf = { version = "^0.31", python = "^3.9" }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
